# enpyre

./: .eslintrc.json  .gitignore  README.md  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
.github/: pull_request_template.md
.github/workflows/: main.yml
engine/: .gitignore  README.md  requirements.txt  server.py  setup.cfg  start.sh
engine/src/engine/: __init__.py  core.py  enpyre.py  graphics.py  js_interface.py  pyongine.py
engine/src/examples/: sample_circle_by_keys.py  sample_circle_by_time.py  sample_come_come.py
lib/: .gitignore  README.md  index.html  package.json  tsconfig.json  tsconfig.node.json  vite.config.js  vite.config.ts
lib/src/: App.tsx  index.ts
lib/src/components/: Pyongine.tsx
lib/src/components/EnpyreDisplay/: index.tsx
lib/src/components/EnpyreEditor/: index.tsx
lib/src/contexts/: App.tsx  Code.tsx  Pyodide.tsx  index.tsx
lib/src/engine/: events.ts  index.ts  types.ts
lib/src/hooks/: App.ts  Code.ts  Pyodide.ts
lib/src/preview/: App.tsx
lib/src/types/: global.d.ts
src/: App.tsx  index.ts
src/components/EnpyreDisplay/: index.tsx
src/components/EnpyreEditor/: index.tsx
src/components/EnpyreOutput/: index.tsx
src/config/: constants.ts
src/contexts/: App.tsx  Code.tsx  Output.tsx  Pyodide.tsx  index.tsx
src/engine/: events.ts  index.ts  types.ts
src/hooks/: App.ts  Code.ts  Output.ts  Pyodide.ts
src/types/: global.d.ts  pyodide.d.ts
