[metadata]
name = pyongine
version = 0.0.1
author = Lucas Amoedo
author_email = lucas.advc@gmail.com
description = "A Python game engine for the browser"
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Pyongine/pyongine/tree/main/engine
project_urls =
	Bug Tracker = https://github.com/Pyongine/pyongine/issues
classifiers =
	Programming Language :: Python :: 3
	Operating System :: OS Independent

[options]
package_dir =
	= src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
