[metadata]
name = enpyre
version = 0.0.1
author = Lucas Amoedo
author_email = lucas.advc@gmail.com
description = "A Python game engine for the browser"
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Enpyre/enpyre/tree/main/engine
project_urls =
	Bug Tracker = https://github.com/Enpyre/enpyre/issues
classifiers =
	Programming Language :: Python :: 3
	Operating System :: OS Independent

[options]
package_dir =
	= src
packages = find:
python_requires = >=3.7

[options.packages.find]
where = src
